@@ -7,13 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="header inverted">
-		<ul class="menu">
-			<li class="menu"><a href="index.html" class="menu-link">WIFISwitch</a></li>
-			<li class="menu"><a href="about.html" class="menu-link">About</a></li>
+	<nav class="header inverted" role="navigation">
+	<a href="#" class="hidden-menu" onclick="ToggleHide('menu');" id="hidden-menu">&#9776;</a>
+		<ul id="menu">
+			<li><a href="index.html" class="menu">WIFISwitch</a></li>		
 		</ul>
-	</div>
-	<div class="main">
+	</nav>
+	<section>
 		<h3 class="grey">About.</h3>
 		<p>WIFI controlled mains switch version <span id="fw_ver">0.0.0</span>.</p>
 		<br />
@@ -29,11 +29,12 @@
 		<br />
 		<h3 class="grey">Source.</h3>
 		<p>The source code is available on GitHub at: <a href="https://github.com/deadbok/WIFISwitch">https://github.com/deadbok/WIFISwitch</a></p>
-	</div>
-	<div class="footer inverted">
+	</section>
+	<foorter>
 		<small><span class="copyright">&copy; Copyright 2015 Martin Bo Kristensen Gr&oslash;nholdt.</span><a href="LICENSE.zip" class="license inverted">Read license (compressed).</a></small>
-	</div>
+	</footer>
 	<script src="js/request.js" type="text/javascript"></script>
+	<script src="js/menu.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var fw_version = document.getElementById("fw_ver");
 		
