@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>About WIFISwitch.</title>
-<link href="css/normalize.css" rel="stylesheet" type="text/css" />
-<link href="css/custom.css" rel="stylesheet" type="text/css" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<div class="header inverted">
-	<ul class="menu">
-			<li class="menu"><a href="index.html" class="menu-link">WIFISwitch</a></li>
-			<li class="menu"><a href="nets.html" class="menu-link">Setup</a></li>
-			<li class="menu"><a href="about.html" class="menu-link">About</a></li>
-	</ul>
-</div>
-<div class="main">
-	<h2 class="grey">About.</h2>
-	<p>Stuff.</p>
-	<br />
-	<h2 class="grey">Credits.</h2>
-	<strong class="grey">Dave Hylands (<a href="http://www.davehylands.com/">http://www.davehylands.com/</a>)</strong>
-	<p>Suggested using a ZIP file, as file system. My code is based on his work
-	at <a href="https://github.com/micropython/micropython/blob/master/teensy/memzip.c">https://github.com/micropython/micropython/blob/master/teensy/memzip.c</a></p>
-	<strong class="grey">Todd Motto (<a href="http://toddmotto.com">http://toddmotto.com</a>)</strong>
-	<p>Has a nice tutorial on AJAX and JavaScript, as well as a library, that I am using.
-	<a href="http://toddmotto.com/writing-a-standalone-ajax-xhr-javascript-micro-library/">http://toddmotto.com/writing-a-standalone-ajax-xhr-javascript-micro-library/</a></p>
-	<strong class="grey">Peter Scargill (<a href="http://tech.scargill.net/">http://tech.scargill.net/</a>)</strong>
-	<p>Writes a nice blog with a lot of esp8266 info.</p>
-	<br />
-	<h2 class="grey">Source.</h2>
-	<p>The sources are available on GitHub at: <a href="https://github.com/deadbok/WIFISwitch">https://github.com/deadbok/WIFISwitch</a></p>
-</div>
-<div class="footer inverted">
-	<small><span class="copyright">&copy; Copyright 2015 Martin Bo Kristensen Gr&oslash;nholdt.</span><a href="LICENSE.zip" class="license inverted">Read license (compressed).</a></small>
-</div>
-<script 
-</body>
-</html>
+../about.html
