@@ -7,32 +7,38 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 </head>
 <body>
-	<div class="header inverted">
-		<ul class="menu">
-			<li class="menu"><a href="index.html" class="menu-link">WIFISwitch</a></li>
-			<li class="menu"><a href="nets.html" class="menu-link">Setup</a></li>
-			<li class="menu"><a href="about.html" class="menu-link">About</a></li>
+	<nav role="navigation">
+		<a href="#" class="hidden-menu" onclick="ToggleHide('menu');" id="hidden-menu">&#9776;</a>
+		<ul id="menu">
+			<li><a href="index.html" class="menu">WIFISwitch</a></li>
+			<li><a href="net.html" class="menu">Network</a></li>
+			<li><a href="ap.html" class="menu">Stand-alone</a></li>
+			<li><a href="restart.html" class="menu">Restart</a></li>			
+			<li><a href="about.html" class="menu">About</a></li>
 		</ul>
-	</div>
-	<div class="main">
+	</nav>
+	<section>
 	<!-- include header.html -->
-		<h3>WIFISwitch setup.</h3>
+		<h3>WIFISwitch configuration.</h3>
 		<h4>Info:</h4>
 		<p>Firmware version: <span id="fw_ver">0.0.0</span></p>
 		<p>HTTP server version: <span id="httpd_ver">0.0.0</span></p>
 		<p>DBFFS version: <span id="dbffs_ver">0.0.0</span></p>
 		<p>Free memory: <span id="free_mem">?</span> bytes</p>
 		<h4>Network config.</h4>
+		<p>Mode: <span id="mode">unknown</span></p>
 		<p>IP address: <span id="ip_addr">none</span></p>
 		<p>Network name: <span id="network">none</span></p>
 		<p>Hostname: <span id="hostname">none</span></p>
-		<a href="nets.html" class="link-button">Setup</a>
+		<p><button type="button" onclick="SwitchMode()">Change mode</button></p>
+		<br />
 	<!-- include footer.html -->
-	</div>
-	<div class="footer inverted">
+	</section>
+	<footer class="inverted">
 		<small><span class="copyright">&copy; Copyright 2015 Martin Bo Kristensen Gr&oslash;nholdt.</span><a href="LICENSE.zip" class="license inverted">Read license (compressed).</a></small>
-	</div>
+	</footer>
 	<script src="js/request.js" type="text/javascript"></script>
+	<script src="js/menu.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var fw_version = document.getElementById("fw_ver");
 		var httpd_version = document.getElementById("httpd_ver");
@@ -41,6 +47,21 @@
 		var ip_addr = document.getElementById("ip_addr");
 		var network = document.getElementById("network");
 		var hostname = document.getElementById("hostname");
+		var mode = document.getElementById("mode");
+
+		function SwitchMode() {
+			if (mode.innerHTML == "stand-alone") {
+				mode.innerHTML = "network";
+			}
+			else
+			{
+				mode.innerHTML = "stand-alone";
+			}
+			JSONrequest('PUT', '/rest/net/network', function(data) {
+			}, function() {
+				mode.innerHTML = "Could not set mode.";
+			}, "{ \"mode\" : \"" + mode.innerHTML + "\" }");
+		}
 		
 		JSONrequest('GET', '/rest/fw/version', function(data) {
 			fw_version.innerHTML = data.fw_ver;
@@ -62,6 +83,7 @@
 			network.innerHTML = data.network;
 			hostname.innerHTML = data.hostname;
 			ip_addr.innerHTML = data.ip_addr;
+			mode.innerHTML = data.mode;
 		}, function() {
 			network.innerHTML = "Could not get default network name.";
 			hostname.innerHTML = "Could not get host name.";
