@@ -1,0 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Network connection setup.</title>
+<link href="css/normalize.css" rel="stylesheet" type="text/css" />
+<link href="css/custom.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+</head>
+<body>
+	<nav role="navigation">
+		<a href="#" class="hidden-menu" onclick="ToggleHide('menu');" id="hidden-menu">&#9776;</a>
+		<ul id="menu">
+			<li><a href="index.html" class="menu">WIFISwitch</a></li>
+			<li><a href="net.html" class="menu">Network</a></li>
+			<li><a href="ap.html" class="menu">Stand-alone</a></li>
+			<li><a href="restart.html" class="menu">Restart</a></li>			
+			<li><a href="about.html" class="menu">About</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h3>Network connection setup.</h3>
+			<p>Network: <select id="networks"><option value="nets">Networks...</option></select></p
+			<p>Hostname: <input type="text" id="hostname" maxlength="32"></p>
+			<p>Password: <input type="password" id="passwd" maxlength="64"></p>
+			<p><button type="button" onclick="SwitchMode()">Save</button></p>
+		<div class="message" id="scnstat">
+			<strong>Scanning!</strong> Still scanning for WIFI networks.
+		</div>
+	</section>
+	<footer class="inverted">
+		<small><span class="copyright">&copy; Copyright 2015 Martin Bo Kristensen Gr&oslash;nholdt.</span><a href="LICENSE.zip" class="license inverted">Read license (compressed).</a></small>
+	</footer>
+	<script src="js/request.js" type="text/javascript"></script>
+	<script src="js/menu.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		var pending = false;
+
+		function populateNetworks(networks) {
+			var netSelect = document.getElementById("networks");
+
+			netSelect.options.length = 0;
+
+			if (networks.length === 0) {
+				netSelect.options[netSelect.options.length] = new Option(
+						"Scanning...", "", false, false);
+				return;
+			}
+			for (var i = 0; i < networks.length; i++) {
+				netSelect.options[netSelect.options.length] = new Option(
+						networks[i], networks[i], false, false);
+				var scnstat = document.getElementById("scnstat");
+				scnstat.className += " success";
+				scnstat.innerHTML = "<strong>Done!</strong> WIFI networks have been scanned.";
+				clearInterval(nameTimer);
+			}
+		}
+
+		function getNetworks() {
+			if (!pending) {
+				pending = true;
+				JSONrequest('GET', '/rest/net/networks', function(data) {
+					populateNetworks(data);
+					pending = false;
+				}, function() {
+					populateNetworks(new Array("Error..."));
+					pending = false;
+					scnstat.className += " error";
+					scnstat.innerHTML = "<strong>Error</strong> scanning WIFI network names.";
+				});
+			}
+		}
+
+		function networkSelect() {
+			var networkName = document.getElementById("networks").value;
+			var network = document.getElementById("network");
+
+			JSONrequest('PUT', '/rest/net/network', function(data) {
+				network.innerHTML = networkName;
+				window.location.assign("/passwd.html");
+			}, function() {
+				network.innerHTML = "Could not set network name.";
+			}, "{ \"network\" : \"" + networkName + "\" }");
+		}
+
+		var network = document.getElementById("network");
+		
+		JSONrequest('GET', '/rest/net/network', function(data) {
+			network.innerHTML = data.network;
+		}, function() {
+			network.innerHTML = "Could not get default network name.";
+		});
+
+		var nameTimer = setInterval(getNetworks, 2000);
+	</script>
+</body>
+<html></html>
